# anttus_homepage

./: .env  Dockerfile  Dockerfile_example  README.md  app.py  cv_data.json  main.py  pyproject.toml  requirements.txt  task_queue.py  tasks.py
.github/workflows/: docker-image.yml
fastapi/: Dockerfile  gunicorn.config.py  main.py  requirements.txt
fastapi/static/css/: style.css
fastapi/templates/: index.html
flask/: app.py
flask/templates/: index.html
static/css/: main.css  style.css
static/js/: main.js
templates/: cv.html  index.html  old.html
