[tool.poetry]
name = "homepage"
version = "1.1.0"
description = "My homepage project"
authors = ["Anttu Suhonen <anttu.suhonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
requests = "^2.32"
jinja2 = "^3.1"
gunicorn = "^22"
redis = "^5"
celery = "^5.4"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
